--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.36",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@tanstack/react-query": "^5.51.1",
     "ai": "^3.2.19",
