--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "openai": "^4.52.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-snowfall": "^2.1.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1"
