Fix enviroments and adding toast

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.408.0",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "openai": "^4.52.5",
     "react": "^18",
     "react-dom": "^18",
     "react-snowfall": "^2.1.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1"
